--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="dist/css/tedvid.min.css">
 
     <!--load if vimeo  -->
-    <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
+    <script src="//a.vimeocdn.com/js/froogaloop2.min.js"></script>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 
         <div id="Video__sticky" class="Video__sticky">
             <div class="container">
-                <a class="Video__details__sticky__watch-next hidden-sm hidden-xs" href="/youtube.html">
+                <a class="Video__details__sticky__watch-next hidden-sm hidden-xs" href="youtube.html">
                     <div class="Video__details__sticky__watch-next__label">Watch next</div>
                     <div class="Video__details__sticky__watch-next__title">Youtube: The real future of space exploration</div>
                     <div class="Video__details__sticky__watch-next__arrow">
@@ -92,7 +92,7 @@
             </div>
         </div>
 
-        <a id="Video__watch-next" class="Video__watch-next hidden-sm hidden-xs" href="/youtube.html">
+        <a id="Video__watch-next" class="Video__watch-next hidden-sm hidden-xs" href="youtube.html">
             <div class="Video__watch-next__label">Watch next</div>
             <div class="Video__watch-next__title">Youtube: The real future of space exploration</div>
             <div class="Video__watch-next__arrow">
