--- a/youtube.html
+++ b/youtube.html
@@ -18,7 +18,7 @@
 
         <div id="Video__sticky" class="Video__sticky">
             <div class="container">
-                <a class="Video__details__sticky__watch-next hidden-sm hidden-xs" href="/">
+                <a class="Video__details__sticky__watch-next hidden-sm hidden-xs" href=".">
                     <div class="Video__details__sticky__watch-next__label">Watch next</div>
                     <div class="Video__details__sticky__watch-next__title">Vimeo: The unreal future of space exploration</div>
                     <div class="Video__details__sticky__watch-next__arrow">
