--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="dist/css/tedvid.min.css">
 
     <!--load if vimeo  -->
-    <script src="//a.vimeocdn.com/js/froogaloop2.min.js"></script>
+    <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
 </head>
 <body>
 
